Sat May 19 17:41:23 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* tests/documents/Makefile.am tests/general/Makefile.am 
	  tests/multiple/Makefile.am tests/namespaces/Makefile.am 
	  tests/numbers/Makefile.am tests/xmlspec/Makefile.am:
	  Seems some of the changes I made for 0.9.0 Makefiles were
	  not commited ...

Sat May 19 17:23:54 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in: preparing 0.10.0 release
	* doc/xslt.html: updated
	* doc/html/* : rebuilt the docs

Fri May 18 16:48:13 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xslt.c libxslt/variables.c libxslt/templates.c
	  libxslt/keys.[ch] libxslt/functions.c: cleanups for ctxt->inst
	  avoiding modifying stylesheet informations, and fixing
	  document() when called from a global variable init

Thu May 17 17:24:35 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/functions.c libxslt/transform.c libxslt/xsltInternals.h:
	  add ctxt->inst to allow stylesheet element lookup (needed
	  for document() fix)
	* libxslt/*.[ch]: generate docs for the structures and
	  macros, general cleanup for docs
	* doc/html/*.html: regenerated all docs

Wed May 16 23:00:53 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/extra.c libxslt/transform.c libxslt/variables.[ch]
	  libxslt/xsltInternals.h: optimizations, cleanup of global
	  variables handling

Wed May 16 12:29:17 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/extensions.c libxslt/preproc.c libxslt/transform.c
	  libxslt/variables.c: force the precompilation of XPath expressions
	  at stylesheet compilation time

Tue May 15 14:34:23 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/keys.c libxslt/transform.c: avoid some possibilities
	  of crashes on debug
	* tests/REC/Makefile.am: be less verbose if things really go wrong
	* tests/docs/Makefile.am tests/general/Makefile.am
	  tests/docs/bug-28-.xml tests/general/bug-28-.*: added bug-28 in