@@ -15,6 +15,10 @@
 extern "C" {
 #endif
 
+#define LIBXSLT_DOTTED_VERSION "@VERSION@"
+#define LIBXSLT_VERSION @LIBXSLT_VERSION_NUMBER@
+#define LIBXSLT_VERSION_STRING "@LIBXSLT_VERSION_NUMBER@"
+
 /**
  * WITH_XSLT_DEBUG:
  *
